tests/script_errors/fn_bad_recur/error.txt
Error: 
    1 | 
    2 | fn snot(a) with
    3 |   recur(a);
      |   ^^^^^^^^ Can not recur from this location
    4 |   a + 1
    5 | end;